--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	      <groupId>org.passay</groupId>
+	      <artifactId>passay</artifactId>
+	      <version>1.6.2</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
