--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.h2.console.enabled=true
 # 进行该配置后，h2 web consloe就可以在远程访问了。否则只能在本机访问。
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.settings.web-admin-password=123456
+
+logging.level.com.demonisles=DEBUG
