--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 	      <artifactId>passay</artifactId>
 	      <version>1.6.2</version>
 	    </dependency>
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.55</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
